Fix typo in name.

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -11,6 +11,6 @@ deployments:
     template: lambda
     contentDirectory: production-metrics-lambdas
     parameters:
-      filename: production-metrics-lambdas.zip
+      fileName: production-metrics-lambdas.zip
       functionNames:
        - "production-metrics-flexible-api-"
