refactor: Simplify riff-raff.yaml file
There is only a single lambda being deployed, so the use of a template isn't necessary.

Also updates the file name after moving to `sbt-assembly`. This requires a CloudFormation change too.

--- a/riff-raff.yaml
+++ b/riff-raff.yaml
@@ -1,16 +1,11 @@
 regions: [eu-west-1]
 stacks: [flexible]
-templates:
-  lambda:
-    type: aws-lambda
+deployments:
+  production-metrics-lambdas:
+    tyoe: aws-lambda
     parameters:
       bucket: composer-dist
       prefixStack: false
-deployments:
-  production-metrics-lambdas:
-    template: lambda
-    contentDirectory: production-metrics-lambdas
-    parameters:
-      fileName: production-metrics-lambdas.zip
+      fileName: production-metrics-lambdas.jar
       functionNames:
-       - "flexible-production-metrics-lambdas-query-capi-"
+        - "flexible-production-metrics-lambdas-query-capi-"
